# BarMeUp_Opt

./: BarMeUp_Intro.ipynb  README.md  bar_optimisation.ipynb  pyproject.toml
.ipynb_checkpoints/: BarMeUp_Intro-checkpoint.ipynb
barmeup/: Ingredient.py  ModelBuilder.py  ModelContainer.py
barmeup_opt/: Ingredient.py  ModelBuilder.py  __init__.py  domain_models.py  model_builder.py  model_container.py  pyproject.toml
math/: General_Praeambel_v1.4.tex  description.aux  description.dvi  description.tex
