[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "barmeup_opt"
author = "Richard Oberdieck, Ruben Menke"
author-email = "r.oberdieck@gmail.com"
home-page = "https://github.com/RichardOberdieck/BarMeUp_Opt"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]

